feat: add path operation to create User
