# backend/handlers/user_hander.go
@@ -2,7 +2,9 @@ package handlers
 
 import (
 	"go-backend/models"
+	"log"
 
+	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -34,8 +36,46 @@ func GetUserByIdHandler(c *fiber.Ctx) error {
 	var foundUser models.User
 	for _, user := range models.MockedUsersTable {
 		if id == user.Id {
-			foundUser = user
+			foundUser = *user
 		}
 	}
 	return c.JSON(foundUser)
+}
+
+// Create a new User.
+// @Summary Create a new User.
+// @Description Create a new User discarting the value for "id" and return
+// @Description such User encoded in JSON.
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param user body models.User true "User"
+// @Success 200 {object} models.User
+// @Failure 400
+// @Router /users [post]
+func CreateUser(c *fiber.Ctx) error {
+	var user models.User
+
+	err := c.BodyParser(&user)
+	if err != nil {
+		log.Print(err)
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"detail": "invalid user data",
+		})
+	}
+
+	models.MockedUsersTable = append(models.MockedUsersTable, &user)
+
+	validate := validator.New()
+
+	err = validate.Struct(user)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"detail": err.Error(),
+		})
+	}
+
+	user.Id = models.NextUserId()
+
+	return c.JSON(user)
 }
